--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Website title
-VITE_APP_TITLE = BABYLON
+VITE_APP_TITLE = GLB MultiTool | BabylonPress.org
 
 # Base Path
 VITE_PUBLIC_PATH = './'
