--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "glb-multitool",
   "private": false,
   "version": "0.0.1",
-  "author": {"name": "Andrei Stepanov",
-  "email": "eldinor@gmail.com",
-  "url": "https://babylonpress.org/"},
+  "author": {
+    "name": "Andrei Stepanov",
+    "email": "eldinor@gmail.com",
+    "url": "https://babylonpress.org/"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,11 +22,12 @@
     "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
-    "@babylonjs/core": "^7.32.0",
-    "@babylonjs/inspector": "^7.32.0",
-    "@babylonjs/loaders": "^7.32.0",
-    "@babylonjs/materials": "^7.32.0",
-    "@babylonjs/post-processes": "^7.32.0",
-    "gridjs": "6.1.1"
+    "@babylonjs/core": "^7.33.0",
+    "@babylonjs/inspector": "^7.33.0",
+    "@babylonjs/loaders": "^7.33.0",
+    "@babylonjs/materials": "^7.33.0",
+    "@babylonjs/post-processes": "^7.33.0",
+    "@babylonjs/viewer": "^7.33.0-alpha",
+    "gridjs": "6.2.0"
   }
 }
