--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20.9.0",
+    "sass": "^1.80.6",
     "typescript": "^5.6.2",
     "vite": "^5.4.10",
     "vite-plugin-compression": "^0.5.1",
@@ -28,6 +30,8 @@
     "@babylonjs/materials": "^7.33.0",
     "@babylonjs/post-processes": "^7.33.0",
     "@babylonjs/viewer": "^7.33.0-alpha",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "gridjs": "6.2.0"
   }
 }
